# data-platform

./: .dbt-checkpoint.yaml  .env_export.sh  .gitignore  .pre-commit-config.yaml  .sqlfluff  .sqlfluffignore  README.md  dbt-checkpoint.yaml  mypy_pre_commit.ini  pyproject.toml  setup.sh
.github/workflows/: ci.yml  prod.yml
src/jaffle_shop/: .user.yml  profiles.yml
src/jaffle_shop/macros/: generate_alias_name.sql
src/jaffle_shop/models/: customers.sql  schema.yml
src/jaffle_shop/models/staging/: schema.yml  stg_orders.sql
src/python/: carbon_intensity_loader.py
