[tool.poetry]
name = "data-platform"
version = "0.1.0"
description = "GCP data platform"
authors = ["Robert Scott"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dbt-bigquery = "^1.7.3"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
mypy = "^1.8.0"
flake8 = "^7.0.0"
flake8-bugbear = "^24.2.6"
flake8-bandit = "^4.1.1"
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
isort = {extras = ["requirement-deprecated-finder"], version = "^5.13.2"}
sqlfluff = "^2.3.5"
sqlfluff-templater-dbt = "^2.3.5"
shandy-sqlfmt = {extras = ["jinjafmt"], version = "^0.21.2"}
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
